--- a/css/responsive.css
+++ b/css/responsive.css
@@ -30,3 +30,26 @@
         margin-bottom: 10px;
     }
 }
+
+@media screen and (max-width: 780px) {
+    .div-1 {
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 980px) {
+    .section1-container {
+        display: block;
+    }
+    .div-1 {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .div-2 {
+        text-align: center;
+        margin-top: 100px;
+    }
+    .div-wave {
+        margin-top: 100px;
+    }
+}
