--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,6 @@ body {
     padding: 12px 16px;
     z-index: 1;
     right: 0px;
-    /* top: 32px; */
     border-radius: 3px;
 }
 
@@ -114,6 +113,7 @@ body {
 /* end section2 */
 
 .section2-container {
+    margin-top: 300px;
     height: 1920px;
     display: flex;
     flex-direction: column;
@@ -208,6 +208,10 @@ body {
 .block6 {
     background-color: #FF8088;
     margin-top: 60px;
+}
+
+.image {
+    width: 600px;
 }
 
 .cont-image {
