--- a/css/responsive.css
+++ b/css/responsive.css
@@ -10,6 +10,9 @@
     .block2 {
         margin-top: 60px;
     }
+    .title {
+        margin-top: 200px;
+    }
 }
 
 @media screen and (max-width: 780px) {
@@ -51,5 +54,11 @@
     }
     .div-wave {
         margin-top: 100px;
+    }
+}
+
+@media screen and (max-width: 571px) {
+    html {
+        width: fit-content;
     }
 }
