--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ body {
 
 .section2-container {
     margin-top: 300px;
-    height: 1920px;
+    /* height: 1920px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
